--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,9 @@ __pycache__/
 *.pyc
 *.png
 *.jpg
+jojun/himeow-eye/models/encoder/finetuning/yolo/basic_models
+jojun/himeow-eye/models/encoder/finetuning/yolo/custom_models
+
 
 #zoo0o
 data/dataset/*
