feat: train ViT base model (#19)

--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,8 @@ __pycache__/
 data/datasets/*
 data/datasets_yolo/*
 models/yolo/base/runs/*
+models/vit/base/runs/*
 yolo11n.pt
 yolov8n-cls.pt
 yolov8x-cls.pt
+test.py
