--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,13 @@
 datasets
 filtered_by_breeds_datasets
 __pycache__/
-agumented_dataset
 *.pyc
 *.png
 *.jpg
+
+#Taehwa
+agumented_dataset
+*.pt
 
 #zoo0o
 data/dataset/*
