--- a/models/diffusion/makefile
+++ b/models/diffusion/makefile
@@ -1,3 +1,6 @@
 # 디폴트 실행 명령
+go:
+	CUDA_VISIBLE_DEVICES=2,3 python __init__.py
+
 diff:
 	CUDA_VISIBLE_DEVICES=1 python /home/minelab/desktop/ANN/Taehwa/himeow-eye/models/diffusion/__init__.py
