feat: fine-tuning sam vision encoder

--- a/.gitignore
+++ b/.gitignore
@@ -5,7 +5,7 @@ __pycache__/
 *.jpg
 models/encoder/finetuning/yolo/basic_models
 models/encoder/finetuning/yolo/custom_models
-
+models/encoder/finetuning/custom_models
 
 #zoo0o
 data/datasets/*
